--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <section>
         <div class="wrapper">
             <div class="text-area">
-                <h2>Fitness made simple.</h2>
-                <p>It’s all about calories in, vs calories out. Discover what the experts know.</p>
+                <div>
+                    <h2>Fitness made simple.</h2>
+                    <p>It’s all about calories in, vs calories out. Discover what the experts know.</p>
+                </div>
                 <div class="link">
                     <a href="#" class="cta">
                         <p>Lose fat today</p>
-                        <div><svg width="29" height="8" viewBox="0 0 29 8" fill="none"
+                        <div><svg width="30" height="10" viewBox="0 0 29 8" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M28.8536 4.35355C29.0488 4.15829 29.0488 3.84171 28.8536 3.64645L25.6716 0.464466C25.4763 0.269204 25.1597 0.269204 24.9645 0.464466C24.7692 0.659728 24.7692 0.976311 24.9645 1.17157L27.7929 4L24.9645 6.82843C24.7692 7.02369 24.7692 7.34027 24.9645 7.53553C25.1597 7.7308 25.4763 7.7308 25.6716 7.53553L28.8536 4.35355ZM0.5 4.5H28.5V3.5H0.5V4.5Z"
@@ -32,13 +34,12 @@
                 </div>
             </div>
             <div class="image-area">
-                <div><img src="/assets/fitness1.jpg" alt=""></div>
-                <div><img src="/assets/fitness2.jpg" alt=""></div>
-                <div><img src="/assets/fitness3.jpg" alt=""></div>
+                <div class="item one"><img src="assets/fitness1.jpg" alt=""></div>
+                <div class="item"><img src="assets/fitness2.jpg" alt=""></div>
+                <div class="item three"><img id="third" src="assets/fitness3.jpg" alt=""></div>
             </div>
         </div>
     </section>
-    <a href="https://wakatime.com/@fa70ab46-a1b5-4bbe-b745-7a5319fc3de0"><img src="https://wakatime.com/badge/user/fa70ab46-a1b5-4bbe-b745-7a5319fc3de0.svg" alt="Total time coded since Jun 23 2023" /></a>
 </body>
 
 </html>
